--- a/scripts/envfit_BVOC_ITS_LODrev_Kawatabi.Rmd
+++ b/scripts/envfit_BVOC_ITS_LODrev_Kawatabi.Rmd
@@ -17,7 +17,6 @@ library(SummarizedExperiment)
 
 #path to raw-data directory (change "path" to your raw-data directory)
 
-
 ```{r}
 #create "path" file, and define "path" as your raw-data directory(character vector) in the file
 #"path" is raw-data directory, and "path_out" is output file directory
@@ -36,7 +35,7 @@ source("../R/bestNMDS.R")
 ```{r import}
 #the microbiome outlier (AZ_040_1, based on bray) is excluded in advance
 #rarefied-ASV table
-df_rarefied <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/BVOC/df_rarefied_ITS_BVOC.csv"), row.names = 1)
+df_rarefied <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/df_rarefied_ITS.csv"), row.names = 1)
 rownames(df_rarefied) <- formatC(as.numeric(rownames(df_rarefied)), width = 4, flag = "0") 
 #add 0 to the head of rownames
 
@@ -48,13 +47,27 @@ tax_table <- as.matrix(tax_table)
 load(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/trees.Rdata"))
 
 #metadata
-metadata <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/BVOC/metadata_ITS_BVOC.csv"), row.names = 1)
-rownames(metadata) <- formatC(as.numeric(rownames(metadata)), width = 4, flag = "0")
-
+metadata <- read_excel(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/metadata_2306.xlsx"), 
+                       sheet = "Sheet1")
+metadata <- column_to_rownames(metadata, var = "Sample_Name")
 metadata$cloneID <- as.factor(metadata$cloneID)
 metadata$population <- as.factor(metadata$population)
 metadata$site <- as.factor(metadata$site)
 metadata$date <- as.factor(metadata$date)
+```
+
+##phyloseq object
+
+```{r}
+ps <- phyloseq(otu_table(df_rarefied, taxa_are_rows = FALSE), 
+               tax_table(tax_table), 
+               phy_tree(tree_rarefied2$data), 
+               sample_data(metadata))
+
+#extract Kawatabi data
+ps_K <- subset_samples(ps, site == "Kawatabi")
+#omit AZ_040_1 and OK_037_1 since they distort the NMDS plot
+ps_K <- subset_samples(ps_K, !(samplename %in% c("AZ_040_1", "OK_037_1")))
 ```
 
 ##revised BVOC data
@@ -63,14 +76,30 @@ metadata$date <- as.factor(metadata$date)
 #read VOC data
 load(file = paste0(path_out, "/data/Sugi/BVOC/exp_Terpene_2209to2408_LODrev_nolod.Rdata"))
 load(file = paste0(path_out, "/data/Sugi/BVOC/exp_Terpene_2209to2408_LODrev_log.Rdata"))
+#exp_Ohta_nolod is the data in which LOD substituted with 0
+#exp_Ohta_log is the log-transformed data
 
 #extract the data for June 2023
 BVOC_2306 <- exp_Ohta_nolod %>% subset(Month == "2306")
 BVOC_2306_log <- exp_Ohta_log %>% subset(Month == "2306")
 #microbial samples for AJ_002_1 and AZ_004_1 were not collected, so remove them
-#fungal sample for AZ_040_1 was excluded in advance, so remove it
+#AZ_040_1 distorted the NMDS plot, so remove it
 BVOC_2306 <- BVOC_2306 %>% subset(!(treeID %in% c("AJ_002_01", "AZ_004_01", "AZ_040_01")))
 BVOC_2306_log <- BVOC_2306_log %>% subset(!(treeID %in% c("AJ_002_01", "AZ_004_01", "AZ_040_01")))
+
+#match the rownames with those of the microbial data
+#feature to match the rownames
+rowData(BVOC_2306) <- data.frame(rowData(BVOC_2306)) %>%
+  mutate(samplename = paste(subpop, IDmid, str_sub(cloneID, 2), sep = "_"))
+rowData(BVOC_2306_log) <- data.frame(rowData(BVOC_2306_log)) %>%
+  mutate(samplename = paste(subpop, IDmid, str_sub(cloneID, 2), sep = "_"))
+
+rownames(BVOC_2306) <- rownames(sample_data(ps_K)[match(rowData(BVOC_2306)$samplename, 
+                                                        sample_data(ps_K)$samplename), 
+                                                  "samplename"])
+rownames(BVOC_2306_log) <- rownames(sample_data(ps_K)[match(rowData(BVOC_2306_log)$samplename, 
+                                                            sample_data(ps_K)$samplename), 
+                                                      "samplename"])
 
 #Longifolene is not detected in the June 2023 samples, so remove it
 BVOC_2306 <- BVOC_2306[, -which(colnames(BVOC_2306) == "Longifolene")]
@@ -101,30 +130,46 @@ all_2306_log <- BVOC_2306_log_rm %>%
   full_join(DT_2306_log, by = "sampleID")
 ```
 
+#dist
+
+```{r}
+dist_bray <- vegdist(otu_table(ps_K), method = "bray")
+dist_UF <- UniFrac(ps_K, weighted = TRUE)
+```
+
+#NMDS
+
+```{r}
+#explore the smallest stress value
+nmds_bray <- bestNMDS(dist_bray)
+```
+
+```{r}
+stressplot(nmds_bray$nmds)
+nmds_bray$nmds$stress
+save(nmds_bray, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/BVOC/NMDS_bray_ITS_BVOC2306_K.Rdata"))
+```
+
 #NMDS_bray
 
 ##envfit
 
 ```{r envfit}
-load(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/BVOC/NMDS_bray_ITS_BVOC2306.Rdata"))
+load(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/BVOC/NMDS_bray_ITS_BVOC2306_K.Rdata"))
 
-#check if the sampleID in the bacterial metadata and the nmds results match
-all(rownames(metadata) == rownames(nmds_bray$nmds$points))
-#check if the sampleID in the BVOC metadata and the BVOC data match
-all(rownames(BVOC_2306) == all_2306_log$sampleID)
-#check if the samplename in the bacterial metadata and the BVOC metadata match
-all(metadata$samplename == (mutate(data.frame(rowData(BVOC_2306)), 
-                                   samplename = paste(subpop, IDmid, str_sub(cloneID, 2), sep = "_"))$samplename))
+#extract the samples for which both microbial and BVOC data are available
+mat_ITS <- nmds_bray$nmds$points
+mat_ITS_BVOC <- mat_ITS[match(all_2306_log$sampleID, rownames(mat_ITS)), ]
+
+#check if the samplename in the bacterial data and the BVOC data match
+all(rownames(mat_ITS_BVOC) == all_2306_log$sampleID)
 ```
 
 ```{r envfit}
 set.seed(45)
-fit_bray <- envfit(nmds_bray$nmds, 
-                   all_2306_log %>% column_to_rownames(var = "sampleID"),
-                   )
-
+fit_bray <- envfit(mat_ITS_BVOC, 
+                   all_2306_log %>% column_to_rownames(var = "sampleID"))
 show(fit_bray)
-
 df_fit_bray <-data.frame(fit_bray$vectors$arrows, 
                          r = fit_bray$vectors$r, 
                          p = fit_bray$vectors$pvals)
@@ -138,15 +183,12 @@ bray_score$arr_col[bray_score$p < 0.05] <- "black"
 
 bray_signif <- bray_score[bray_score$p < 0.1, ]
 
-save(fit_bray, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/analysis/envfit_bray_BVOC_LODrev.Rdata"))
-write.csv(df_fit_bray, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/analysis/envfit_bray_BVOC_LODrev.csv"))
+save(fit_bray, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/analysis/envfit_bray_BVOC_LODrev_K.Rdata"))
+write.csv(df_fit_bray, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/analysis/envfit_bray_BVOC_LODrev_K.csv"))
 ```
 
 ```{r}
 #exclude the samples with <LOD values
-#extract the NMDS coordinates
-mat_ITS <- nmds_bray$nmds$points
-rownames(mat_ITS) <- all_2306_log$sampleID
 
 #exclude the terpenes with less than 10 of the samples having <LOD values
 ter_major <- which(apply(all_2306_log > 0, 2, sum) > 10)
@@ -164,7 +206,7 @@ for (i in ter_major[-1]) {
   #sampleID of the samples with >LOD values
   id <- which(all_2306_log[, i] > 0)
   #perform envfit with the samples with >LOD values
-  fit <- envfit(mat_ITS[id, ], 
+  fit <- envfit(mat_ITS_BVOC[id, ], 
                 all_2306_log[id, i], 
                 na.rm = TRUE)
   
@@ -175,43 +217,14 @@ for (i in ter_major[-1]) {
   df_fit[i, "p"] <- fit$vectors$pvals[1]
 }
 
-write.csv(df_fit, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/analysis/envfit_bray_BVOC_LODrev_omitLOD.csv"))
-```
-
-###Fit the detection as factor variables
-
-```{r}
-#convert the BVOC data to factor variables based on LOD
-all_2306_isLOD <- all_2306_log %>%
-  mutate(across(where(is.numeric), ~ ifelse(. > 0, "Detected", "<LOD"))) %>%
-  mutate(across(where(is.character), as.factor))
-
-set.seed(45)
-fit_bray_isLOD <- envfit(nmds_bray$nmds, 
-                   all_2306_isLOD %>% column_to_rownames(var = "sampleID"),
-                   )
-
-show(fit_bray_isLOD)
-
-df_fit_bray_isLOD <-data.frame(fit_bray_isLOD$vectors$arrows,
-                               r = fit_bray_isLOD$vectors$r,
-                               p = fit_bray_isLOD$vectors$pvals)
-
-bray_score_isLOD <- scores(fit_bray_isLOD, display = "vectors")
-bray_score_isLOD <- rownames_to_column(data.frame(bray_score_isLOD))
-bray_score_isLOD <- data.frame(bray_score_isLOD, 
-                        p = fit_bray_isLOD$vectors$pvals, 
-                        arr_col = rep("grey", nrow(bray_score_isLOD)))
-bray_score_isLOD$arr_col[bray_score_isLOD$p < 0.05] <- "black"
-
-bray_signif <- bray_score_isLOD[bray_score_isLOD$p < 0.1, ]
-
-#save(fit_bray_isLOD, file = paste0(path_out, #"/231202_Sugi_phyllosphere_June_ITS/analysis/envfit_bray_BVOC_LODrev_isLOD.Rdata"))
-#write.csv(df_fit_bray_isLOD, file = paste0(path_out, #"/231202_Sugi_phyllosphere_June_ITS/analysis/envfit_bray_BVOC_LODrev_isLOD.csv"))
+show(df_fit)
+write.csv(df_fit, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/analysis/envfit_bray_BVOC_LODrev_omitLOD_K.csv"))
 ```
 
 ```{r}
-df_nmds <- data.frame(metadata, nmds_bray$nmds$points)
+df_nmds <- data.frame(mat_ITS_BVOC) %>% 
+  rownames_to_column(var = "sampleID") %>%
+  left_join(data.frame(sample_data(ps_K)) %>% rownames_to_column(var = "sampleID"), by = "sampleID")
 col_pop <- colorRampPalette(c("blue3", "orange2"))(3)
 
 p_bray <- ggplot(df_nmds, mapping = aes(x = MDS1, y = MDS2)) +
@@ -220,15 +233,15 @@ p_bray <- ggplot(df_nmds, mapping = aes(x = MDS1, y = MDS2)) +
   coord_fixed(ratio = 1) + ## need aspect ratio of 1!
   scale_color_manual(values = col_pop, labels = c("Ajigazawa", "Azouji", "Yakushima")) +
   labs(color = "Population") +
-  xlim(c(-1.2, 1.3)) + ylim(c(-1.2, 1.3)) +
+  xlim(c(-1.5, 1.3)) + ylim(c(-1.2, 1.3)) +
   
   #arrows to show the direction of BVOC emission vectors
   geom_segment(data = bray_signif,
-               aes(x = 0, xend = NMDS1, y = 0, yend = NMDS2),
+               aes(x = 0, xend = MDS1, y = 0, yend = MDS2),
                arrow = arrow(length = unit(1, "mm")), 
                color = bray_signif$arr_col) +
   geom_text(data = bray_signif,  
-            aes(x = NMDS1, y = NMDS2 - 0.05, label = rowname), 
+            aes(x = MDS1, y = MDS2 - 0.05, label = rowname), 
             size = 2) +
   
   #annotation to show the significance of BVOC emission vectors
@@ -257,7 +270,7 @@ p_bray <- ggplot(df_nmds, mapping = aes(x = MDS1, y = MDS2)) +
         legend.text = element_text(size = 7), 
         legend.key.size = unit(2, "mm"))
 show(p_bray)
-ggsave(plot = p_bray, 
-       filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/figures/envfit_BVOC_log_LODrev.png"), 
-       dpi = 400, width = 75, height = 75, units = "mm")
+#ggsave(plot = p_bray, 
+#       filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/figures/envfit_BVOC_log_LODrev.png"), 
+#       dpi = 400, width = 75, height = 75, units = "mm")
 ```
