--- a/scripts/envfit_BVOC_LODrev_Kawatabi.Rmd
+++ b/scripts/envfit_BVOC_LODrev_Kawatabi.Rmd
@@ -35,7 +35,7 @@ source("../R/bestNMDS.R")
 ```{r import}
 #change "16S" to "ITS" to rarefy ITS data
 #rarefied-ASV table
-df_rarefied <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/BVOC/df_rarefied_16S_BVOC.csv"), row.names = 1)
+df_rarefied <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/df_rarefied_16S.csv"), row.names = 1)
 rownames(df_rarefied) <- formatC(as.numeric(rownames(df_rarefied)), width = 4, flag = "0") 
 #add 0 to the head of rownames
 
@@ -47,13 +47,25 @@ tax_table <- as.matrix(tax_table)
 load(paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/trees.Rdata"))
 
 #metadata
-metadata <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/BVOC/metadata_16S_BVOC.csv"), row.names = 1)
-rownames(metadata) <- formatC(as.numeric(rownames(metadata)), width = 4, flag = "0")
-
+metadata <- read_excel(paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/metadata_2306.xlsx"), 
+                       sheet = "Sheet1")
+metadata <- column_to_rownames(metadata, var = "Sample_Name")
 metadata$cloneID <- as.factor(metadata$cloneID)
 metadata$population <- as.factor(metadata$population)
 metadata$site <- as.factor(metadata$site)
 metadata$date <- as.factor(metadata$date)
+```
+
+##phyloseq object
+
+```{r}
+ps <- phyloseq(otu_table(df_rarefied, taxa_are_rows = FALSE), 
+               tax_table(tax_table), 
+               phy_tree(tree_rarefied2$data), 
+               sample_data(metadata))
+
+#extract Kawatabi data
+ps_K <- subset_samples(ps, site == "Kawatabi")
 ```
 
 ##revised BVOC data
@@ -62,6 +74,8 @@ metadata$date <- as.factor(metadata$date)
 #read VOC data
 load(file = paste0(path_out, "/data/Sugi/BVOC/exp_Terpene_2209to2408_LODrev_nolod.Rdata"))
 load(file = paste0(path_out, "/data/Sugi/BVOC/exp_Terpene_2209to2408_LODrev_log.Rdata"))
+#exp_Ohta_nolod is the data in which LOD substituted with 0
+#exp_Ohta_log is the log-transformed data
 
 #extract the data for June 2023
 BVOC_2306 <- exp_Ohta_nolod %>% subset(Month == "2306")
@@ -69,6 +83,20 @@ BVOC_2306_log <- exp_Ohta_log %>% subset(Month == "2306")
 #microbial samples for AJ_002_1 and AZ_004_1 were not collected, so remove them
 BVOC_2306 <- BVOC_2306 %>% subset(!(treeID %in% c("AJ_002_01", "AZ_004_01")))
 BVOC_2306_log <- BVOC_2306_log %>% subset(!(treeID %in% c("AJ_002_01", "AZ_004_01")))
+
+#match the rownames with those of the microbial data
+#feature to match the rownames
+rowData(BVOC_2306) <- data.frame(rowData(BVOC_2306)) %>%
+  mutate(samplename = paste(subpop, IDmid, str_sub(cloneID, 2), sep = "_"))
+rowData(BVOC_2306_log) <- data.frame(rowData(BVOC_2306_log)) %>%
+  mutate(samplename = paste(subpop, IDmid, str_sub(cloneID, 2), sep = "_"))
+
+rownames(BVOC_2306) <- rownames(sample_data(ps_K)[match(rowData(BVOC_2306)$samplename, 
+                                                        sample_data(ps_K)$samplename), 
+                                                  "samplename"])
+rownames(BVOC_2306_log) <- rownames(sample_data(ps_K)[match(rowData(BVOC_2306_log)$samplename, 
+                                                            sample_data(ps_K)$samplename), 
+                                                      "samplename"])
 
 #Longifolene is not detected in the June 2023 samples, so remove it
 BVOC_2306 <- BVOC_2306[, -which(colnames(BVOC_2306) == "Longifolene")]
@@ -99,32 +127,42 @@ all_2306_log <- BVOC_2306_log_rm %>%
   full_join(DT_2306_log, by = "sampleID")
 ```
 
-##phyloseq object
+#dist
 
 ```{r}
-ps <- phyloseq(otu_table(df_rarefied, taxa_are_rows = FALSE), 
-               tax_table(tax_table), 
-               phy_tree(tree_rarefied2$data), 
-               sample_data(metadata))
+dist_bray <- vegdist(otu_table(ps_K), method = "bray")
+dist_UF <- UniFrac(ps_K, weighted = TRUE)
+```
+
+#NMDS
+
+```{r}
+#explore the smallest stress value
+nmds_bray <- bestNMDS(dist_bray)
+```
+
+```{r}
+stressplot(nmds_bray$nmds)
+nmds_bray$nmds$stress
+save(nmds_bray, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/BVOC/NMDS_bray_16S_BVOC2306_K.Rdata"))
 ```
 
 ##envfit
 
 ```{r envfit}
-load(paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/BVOC/NMDS_bray_16S_BVOC2306.Rdata"))
+load(paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/BVOC/NMDS_bray_16S_BVOC2306_K.Rdata"))
 
-#check if the sampleID in the bacterial metadata and the nmds results match
-all(rownames(metadata) == rownames(nmds_bray$nmds$points))
-#check if the sampleID in the BVOC metadata and the BVOC data match
-all(rownames(BVOC_2306) == all_2306_log$sampleID)
-#check if the samplename in the bacterial metadata and the BVOC metadata match
-all(metadata$samplename == (mutate(data.frame(rowData(BVOC_2306)), 
-                                   samplename = paste(subpop, IDmid, str_sub(cloneID, 2), sep = "_"))$samplename))
+#extract the samples for which both microbial and BVOC data are available
+mat_16S <- nmds_bray$nmds$points
+mat_16S_BVOC <- mat_16S[match(all_2306_log$sampleID, rownames(mat_16S)), ]
+
+#check if the samplename in the bacterial data and the BVOC data match
+all(rownames(mat_16S_BVOC) == all_2306_log$sampleID)
 ```
 
 ```{r envfit}
 set.seed(45)
-fit_bray <- envfit(nmds_bray$nmds, 
+fit_bray <- envfit(mat_16S_BVOC, 
                    all_2306_log %>% column_to_rownames(var = "sampleID"))
 show(fit_bray)
 df_fit_bray <-data.frame(fit_bray$vectors$arrows, 
@@ -140,15 +178,12 @@ bray_score$arr_col[bray_score$p < 0.05] <- "black"
 
 bray_signif <- bray_score[bray_score$p < 0.1, ]
 
-save(fit_bray, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/envfit_bray_BVOC_LODrev.Rdata"))
-write.csv(df_fit_bray, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/envfit_bray_BVOC_LODrev.csv"))
+save(fit_bray, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/envfit_bray_BVOC_LODrev_K.Rdata"))
+write.csv(df_fit_bray, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/envfit_bray_BVOC_LODrev_K.csv"))
 ```
 
 ```{r}
 #exclude the samples with <LOD values
-#extract the NMDS coordinates
-mat_16S <- nmds_bray$nmds$points
-rownames(mat_16S) <- all_2306_log$sampleID
 
 #exclude the terpenes with less than 10 of the samples having <LOD values
 ter_major <- which(apply(all_2306_log > 0, 2, sum) > 10)
@@ -166,7 +201,7 @@ for (i in ter_major[-1]) {
   #sampleID of the samples with >LOD values
   id <- which(all_2306_log[, i] > 0)
   #perform envfit with the samples with >LOD values
-  fit <- envfit(mat_16S[id, ], 
+  fit <- envfit(mat_16S_BVOC[id, ], 
                 all_2306_log[id, i], 
                 na.rm = TRUE)
   
@@ -178,11 +213,14 @@ for (i in ter_major[-1]) {
 }
 
 show(df_fit)
-write.csv(df_fit, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/envfit_bray_BVOC_LODrev_omitLOD.csv"))
+write.csv(df_fit, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/envfit_bray_BVOC_LODrev_omitLOD_K.csv"))
 ```
 
 ```{r}
-df_nmds <- data.frame(metadata, nmds_bray$nmds$points)
+df_nmds <- data.frame(mat_16S_BVOC) %>% 
+  rownames_to_column(var = "sampleID") %>%
+  left_join(data.frame(sample_data(ps_K)) %>% rownames_to_column(var = "sampleID"), by = "sampleID")
+  
 col_pop <- colorRampPalette(c("blue3", "orange2"))(3)
 
 p_bray <- ggplot(df_nmds, mapping = aes(x = MDS1, y = MDS2)) +
@@ -195,11 +233,11 @@ p_bray <- ggplot(df_nmds, mapping = aes(x = MDS1, y = MDS2)) +
   
   #arrows to show the direction of BVOC emission vectors
   geom_segment(data = bray_signif,
-               aes(x = 0, xend = NMDS1, y = 0, yend = NMDS2),
+               aes(x = 0, xend = MDS1, y = 0, yend = MDS2),
                arrow = arrow(length = unit(1, "mm")), 
                color = bray_signif$arr_col) +
   geom_text(data = bray_signif,  
-            aes(x = NMDS1, y = NMDS2 + 0.1, label = rowname), 
+            aes(x = MDS1, y = MDS2 + 0.1, label = rowname), 
             size = 2) +
   
   #annotation to show the significance of BVOC emission vectors
@@ -228,8 +266,8 @@ p_bray <- ggplot(df_nmds, mapping = aes(x = MDS1, y = MDS2)) +
         legend.text = element_text(size = 7), 
         legend.key.size = unit(2, "mm"))
 show(p_bray)
-ggsave(plot = p_bray, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/envfit_BVOC_log_LODrev.png"), 
-       dpi = 400, width = 75, height = 75, units = "mm")
+#ggsave(plot = p_bray, filename = paste0(path_out, #"/231202_Sugi_phyllosphere_June_16S/figures/envfit_BVOC_log_LODrev_K.png"), 
+#       dpi = 400, width = 75, height = 75, units = "mm")
 ```
 
 #NMDS_weighted UF
